Sat Sep 12 05:35:24 2015  Eric Wong  <e@80x24.org>

	* rational.c (string_to_r_strict): preserve encoding in exception

Fri Sep 11 20:23:35 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h: remove rb_call_info_t::aux.opt_pc.

	* vm_insnhelper.c: introduce shortcut functions for opt_pc == 0
	  because opt_pc is always 0 on shortcut function.

Fri Sep 11 17:49:36 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.c: disable ISeq.load. It enabled accidentally at r51794.

Fri Sep 11 11:15:12 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (size, mdtm, system): parse responses according to
	  RFC 959 and 3659, where reply codes must be followed by SP.

	* lib/net/ftp.rb (system): remove LF from the return value.

Thu Sep 10 22:48:49 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (literal_concat_gen, evstr2dstr_gen): keep literal
	  encoding beginning with an interpolation same as the source file
	  encoding.  [ruby-core:70703] [Bug #11519]

Thu Sep 10 22:15:51 2015  Joe Rafaniello  <jrafanie@redhat.com>

	* process.c (rb_f_spawn): Be more specific regarding "other
	  values" by having "non-zero positive integers" Add nil, the
	  default value, as a possible value and what it means.

	  Try to use more consistent language.
	  [Fix GH-1008]

Thu Sep 10 15:16:02 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (getmultiline): refactor.

Thu Sep 10 12:17:28 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_build_from_ary_body): register cdhash to the
	  iseq constant body instead of compile time mark array, not to
	  get GCed.  [ruby-core:70708] [Feature #8543]

Wed Sep  9 18:16:14 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/rubygems/stub_specification.rb (Gem::StubSpecification#data):
	  should not change the value of $. when `require`ing gems.
	  this fixed test failures introduced by r51813.

Wed Sep  9 16:55:45 2015  NAKAMURA Usaku  <usa@ruby-lang.org>
