@@ -1,3 +1,8 @@
+Sat Sep 12 14:23:20 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* win32/win32.c (fcntl): implement F_GETFD, F_SETFD, and
+	  F_DUPFD_CLOEXEC.
+
 Sat Sep 12 05:35:24 2015  Eric Wong  <e@80x24.org>
 
 	* rational.c (string_to_r_strict): preserve encoding in exception
